--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </div>
   <div class="top">
     <div class="top-o">
-      <img class="cloud-o" src="C:\Users\bsr72\OneDrive\Documents\web development\CSS-My site\CSS - My Site Images\CSS - My Site Images\cloud.png" alt="cloud-image">
+      <img class="cloud-o" src="cloud.png" alt="cloud-image">
       <h1>IAM CHANIKYA</h1>
       <p class="p-o">
         a web devloper
