--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
         a web devloper
       </p>
     </div>
-    <img class="cloud-t" src="C:\Users\bsr72\OneDrive\Documents\web development\CSS-My site\CSS - My Site Images\CSS - My Site Images\cloud.png" alt="cloud-image">
-    <img class="mo" src="C:\Users\bsr72\OneDrive\Documents\web development\CSS-My site\CSS - My Site Images\CSS - My Site Images\mountain.png" alt="mountain-image">
+    <img class="cloud-t" src="cloud.png" alt="cloud-image">
+    <img class="mo" src="mountain.png" alt="mountain-image">
   </div>
   <div class="middle-container">
     <div class="profile">
-      <img src="C:\Users\bsr72\OneDrive\Documents\web development\CSS-My site\CSS - My Site Images\CSS - My Site Images\angela.png" alt="">
+      <img src="angela.png" alt="">
       <h2>Hello.</h2>
       <p>Lorem ipsum dolor sit amet, vitae<br>
          volutpat, dui conubia, dolor urna.
@@ -44,12 +44,12 @@
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="chillies" src="C:\Users\bsr72\OneDrive\Documents\web development\CSS-My site\CSS - My Site Images\CSS - My Site Images\chillis.png" alt="">
+        <img class="chillies" src="chillis.png" alt="">
         <h3>Lorem & Ipsum</h3>
         <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
       </div>
       <div class="skill-row">
-        <img class="computer" src="C:\Users\bsr72\OneDrive\Documents\web development\CSS-My site\CSS - My Site Images\CSS - My Site Images\computer.png" alt="">
+        <img class="computer" src="computer.png" alt="">
         <h3>Lorem Ipsum Dolor</h3>
         <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
       </div>
